<resources>
    <string name="app_name">Everywhere</string>
    <string name="request_permission">we need camera</string>
    <string name="picture">Picture</string>
    <string name="description_info">Some Desc</string>
    <string name="camera_error">Something wrong!</string>
    <string name="intro_message">Hellow</string>
    <string name="permission_request">We need video camera</string>
    <string name="record">Rec</string>
    <string name="stop">Stop</string>
    <string name="sign_in">Sign in</string>
    <string name="login_or_register">Login/ Register</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="e_mail">email</string>
    <string name="my_tasks">My Tasks</string>
    <string name="action_sort_id">Id</string>
    <string name="action_sort_dueby">Due by</string>
    <string name="action_sort_title">Title</string>
    <string name="action_sort_priority">Priority</string>
</resources>
