<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/action_sort_priority"
        android:orderInCategory="100"
        android:title="@string/action_sort_priority"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_title"
        android:orderInCategory="100"
        android:title="@string/action_sort_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_dueby"
        android:orderInCategory="100"
        android:title="@string/action_sort_dueby"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_id"
        android:orderInCategory="100"
        android:title="@string/action_sort_id"
        app:showAsAction="never"/>
    </group>
</menu>