<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yakymovych.simon.everywhere.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@{viewModel.editTextEmailValue}"
            app:addTextChangedListener="@{viewModel.getUserMailEditTextWatcher}"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@{viewModel.editTextPasswordValue}"
            app:addTextChangedListener="@{viewModel.getUserPassEditTextWatcher}"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="41dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/login_or_register"
            app:layout_constraintEnd_toStartOf="@+id/switchLoginOrRegister"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Switch
            android:id="@+id/switchLoginOrRegister"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:checked="@{viewModel.doRegister}"
            android:onCheckedChanged="@{viewModel.onLoginRegisterSwitchChange}"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login"
            android:onClick="@{viewModel.onLogInClick}"
            app:layout_constraintEnd_toEndOf="@+id/switchLoginOrRegister"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
    </androidx.constraintlayout.ConstraintLayout>
</layout>